# aipa

./: .env.example  .gitignore  Procfile  config.py  dependencies.py  logging_config.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  supabase_keepalive.sql  supabase_migration.sql  supabase_migration_accounts.sql  supabase_migration_clerk.sql  supabase_migration_google.sql  supabase_migration_skills.sql  supabase_migration_timezone.sql  ui.py
account/: router.py  schemas.py
agent/: context_fetcher.py  embeddings.py  llm_client.py  prompt_builder.py  schemas.py
conversations/: manager.py  router.py
core/: auth.py  clerk.py  encryption.py  exceptions.py  google_auth.py  health.py  passwords.py
db/: client.py
db/queries/: accounts.py  api_keys.py  boss_config.py  businesses.py  channels.py  conversations.py  knowledge_base.py  messages.py  setup.py  skills.py
scripts/: generate_skills.py  import_prompts.py  taxonomy.py
setup/: router.py  schemas.py
skills/: router.py  schemas.py
static/: app.js  index.html  style.css
telegram/: router.py  schemas.py  sender.py
whatsapp/: router.py  schemas.py  waha.py
