[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aipa"
version = "0.1.0"

[tool.setuptools]
package-dir = {"aipa" = "."}
packages = [
    "aipa",
    "aipa.db",
    "aipa.db.queries",
    "aipa.agent",
    "aipa.conversations",
    "aipa.core",
    "aipa.setup",
    "aipa.telegram",
]
