[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aipa"
version = "0.2.0"

[tool.setuptools]
package-dir = {"aipa" = "."}
packages = [
    "aipa",
    "aipa.account",
    "aipa.agent",
    "aipa.conversations",
    "aipa.core",
    "aipa.db",
    "aipa.db.queries",
    "aipa.scripts",
    "aipa.setup",
    "aipa.skills",
    "aipa.telegram",
    "aipa.whatsapp",
]

[tool.setuptools.package-data]
aipa = ["static/*"]
